--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
 
 repositories {
     google()
+}
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
